...
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:id="@+id/addProfilePic"
        app:srcCompat="@drawable/ic_add_image"
        app:layout_constraintEnd_toEndOf="@id/profile_imageView"
        app:layout_constraintTop_toTopOf="@id/profile_imageView"
        app:layout_constraintBottom_toBottomOf="@id/profile_imageView"/>

    <EditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/firstNameText"
        android:fontFamily="@font/comic_neue_bold"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="FirstName"
        app:layout_constraintTop_toBottomOf="@id/profile_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
    <EditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:id="@+id/lastNameText"
        android:fontFamily="@font/comic_neue_bold"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="LastName"
        app:layout_constraintTop_toBottomOf="@+id/firstNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:hint="UserName(Optional)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameText" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/comic_neue_bold"
...
