...
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/comic_neue_bold"
        android:text="Create Account"
        android:id="@+id/createAcctBtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:layout_constraintTop_toBottomOf="@+id/headerName"
...
